--- a/.github/workflows/cdn-dist.yml
+++ b/.github/workflows/cdn-dist.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          submodules: recursive
 
       - name: Use Node.js
         uses: actions/setup-node@v4
